# containerHelper

./: .gitignore  CLAUDE.md  Cargo.toml  Dockerfile  README.md  docker-compose.yml
.github/workflows/: ci.yml
frontend/: Dockerfile  package-lock.json  package.json
frontend/src/: App.tsx  main.tsx  setupTests.ts
frontend/src/api/: containers.ts
frontend/src/components/: DockerfilePreview.tsx  LanguageSelection.tsx  Navigation.tsx  OSSelection.tsx  SshConfiguration.tsx  StepLayout.tsx
frontend/src/components/__tests__/: OSSelection.test.tsx
frontend/src/constants/: options.ts
frontend/src/pages/: Containers.tsx  Generator.tsx
frontend/src/services/: api.ts
frontend/src/types/: config.ts
frontend/src/utils/: dockerfileGenerator.ts
src/: main.rs
src/db/: mod.rs
src/models/: config.rs  container.rs
src/routes/: container.rs  dockerfile.rs  health.rs  mod.rs
src/services/: docker_service.rs  dockerfile_generator.rs  mod.rs
